k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: options-dashboard-deployment
  labels:
    app: options-dashboard
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: options-dashboard
  template:
    metadata:
      labels:
        app: options-dashboard
    spec:
      containers:
      - name: options-dashboard
        # Change this to deploy your own image (see README).
        image: itayb5/options-scanner:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
